--- a/style.css
+++ b/style.css
@@ -1,5 +1,46 @@
-.header{
-    border: red 5px solid;
+/*tags*/
+body{
+    font-family: 'Roboto';
+}
+img{
+    max-width: 450px;
+    max-height: auto;
+}
+li{
+    list-style: none;
+    padding: 12px;
+}
+ul{
+    display: flex;
+    padding: 0px;
+    justify-content: space-around;
+    gap: 15px;
+}
+a{
+    text-decoration-line: none;
+    font-size: 18px;
+    color: #E5E7EB;
+}
+h2{
+    font-size: 48px;
+    font-weight: 900;
+    color: #F9FAF8;
+}
+button{
+    padding-left: 12px;
+    padding-right: 12px;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    background-color: #3882F6;   
+    color: white;
+    border-radius: 5px;
+    font-weight: 600;
+}
+/*class*/
+
+.headertop{
+    display: flex;
+    justify-content: space-between;
 }
 .info{
     border: blue 5px solid;
@@ -7,18 +48,37 @@
 .footer{
     border: green 5px solid;
 }
-img{
-    max-width: 500px;
-    max-height: auto;
+
+.header,
+.footer{
+    background-color: #1F2937;
 }
-
-
+.container{
+    display: flex;
+    justify-content: center;
+    gap: 50px;
+}
+/*id*/
 
 #logo{
     width: 100px;
     height: auto;
+    padding: 12px;
 }
-.header,
-.footer{
-    background-color: #1F2937;
+.paragraph-one{
+    font-size: 18px;
+    color: #E5E7EB; 
+}
+.header-container{
+    display: flex;
+    flex-direction: column;
+    align-items:flex-start;
+    max-width: 500px;
+    padding-left: 100px;
+    padding-bottom: 15px ;
+}
+.header-container-photo{
+    display: flex;
+    padding: 25px;
+    
 }
