--- a/style.css
+++ b/style.css
@@ -26,6 +26,11 @@ h2{
     font-weight: 900;
     color: #F9FAF8;
 }
+h3{
+    font-size: 36px;
+    color: #1F2937;
+    font-weight: 900;
+}
 button{
     padding-left: 12px;
     padding-right: 12px;
@@ -42,7 +47,8 @@ button{
     display: flex;
     justify-content: space-between;
 }
-.info{
+.info.quote,
+.info.reclut{
     border: blue 5px solid;
 }
 .footer{
@@ -61,7 +67,7 @@ button{
 /*id*/
 
 #logo{
-    width: 100px;
+    width: 150px;
     height: auto;
     padding: 12px;
 }
@@ -81,4 +87,29 @@ button{
     display: flex;
     padding: 25px;
     
+}
+.info.images{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: white;
+}
+.card{
+    display: flex;
+    justify-content: space-around;
+    gap: 25px;
+}
+.card img{
+    width: 200px;
+    height: auto;
+    border: #3882F6 2px solid;
+    border-radius: 5px;
+}
+
+.card div{
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    justify-content: center;
+    max-width: 200px;
 }
