--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
 /*tags*/
 body{
+    display: flex;
+    flex-direction: column;
     font-family: 'Roboto';
+    margin: 0;
 }
 img{
     max-width: 450px;
@@ -36,7 +39,8 @@ button{
     padding-right: 12px;
     padding-top: 8px;
     padding-bottom: 8px;
-    background-color: #3882F6;   
+    background-color: #3882F6; 
+    border: none;  
     color: white;
     border-radius: 5px;
     font-weight: 600;
@@ -47,13 +51,6 @@ button{
     display: flex;
     justify-content: space-between;
 }
-.info.reclut{
-    border: blue 5px solid;
-}
-.footer{
-    border: green 5px solid;
-}
-
 .header,
 .footer{
     background-color: #1F2937;
@@ -124,4 +121,27 @@ button{
 }
 .info.quote.text p{
     padding: 0px;
+}
+.info.reclut{
+    background-color: #ffffff;
+    display: flex;
+
+    justify-content: space-around;
+}
+.info.reclut button{
+    border: #ffffff 2px solid;
+}
+.info.reclut.container{
+    background-color: #3882F6;
+    padding: 25px;
+    margin: 20px;
+    color: #ffffff;
+}
+.footer p{
+    display: flex;
+    flex-direction: column;
+    min-height: auto;
+    color: #ffffff;
+    padding: 12px;
+    text-align: center;
 }
